added api routes to the routes
